# mini-transformer

./: .gitignore  README.md  grid_search_results.json  main.py  pyproject.toml  requirements.txt
checkpoints/base_model/checkpoint-5000/: model.pt
checkpoints/base_model/checkpoint-FINAL/: model.pt
checkpoints/grid_search_TEST_d_ff512_d_model128_lr0.0001_n_heads4/checkpoint-FINAL/: model.pt
data/medium/: small_medium_data.pt
data/small/: small_data.pt
output/: combined_results.json  grid_search_results.json  grid_search_results_shayne.json  top_40_configs.json
src/analytics/: analysis.py
src/configs/: base_config.yaml  base_configs.yaml  exp_1.yaml  exp_1a.yaml  exp_2.yaml  experiment_shayne.yaml  experiments.yaml  experiments_shane.yaml  final_configs.yaml  logger_config.py  test_grid_configs.yaml
src/datasets/: dataset.py  prep.py  segment.py  test.py
src/models/: eval.py  grid_search.py  model.py  model_v2.py  model_v3.py  training.py
src/utils/: decorators.py  helpers.py
